--- a/Example/SunshineAlbum/SunshineAlbum/View/AlbumsListCell.xib
+++ b/Example/SunshineAlbum/SunshineAlbum/View/AlbumsListCell.xib
@@ -12,14 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="AlbumsListCell" customModule="PhotosDemo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AlbumsListCell" rowHeight="60" id="KGk-i7-Jjw" customClass="AlbumsListCell" customModule="SunshineAlbum_Example" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="287" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_album_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="kcH-F6-AHD">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kcH-F6-AHD">
                         <rect key="frame" x="0.0" y="0.0" width="59.5" height="59.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="kcH-F6-AHD" secondAttribute="height" multiplier="1:1" id="a0o-6p-S1W"/>
@@ -55,7 +55,4 @@
             </connections>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="icon_album_placeholder" width="24" height="24"/>
-    </resources>
 </document>
