--- a/Example/SunshineAlbum/SunshineAlbum/View/PhotoPreviewCell.xib
+++ b/Example/SunshineAlbum/SunshineAlbum/View/PhotoPreviewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoPreviewCell" customModule="PhotosDemo" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="PhotoPreviewCell" reuseIdentifier="PhotoPreviewCell" id="gTV-IL-0wX" customClass="PhotoPreviewCell" customModule="SunshineAlbum_Example" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="255" height="372"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
